# fhir-patient-dashboard

./: README.md  pyproject.toml
data/: patient_bundle.json
fhir_dashboard/: app.py  generator.py  models.py  parser.py
static/css/: style.css
static/js/: dashboard.js
templates/: index.html
tests/: test_parser.py
