[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fhir-patient-dashboard"
version = "0.1.0"
description = "FHIR R4 compliant patient data dashboard with real-time vital signs monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "DinhLucent", email = "dinhlucent@users.noreply.github.com"}]
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
